--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lookmeuplol",
+  "name": "findmegg",
   "version": "1.0.0",
   "description": "A website created to grab a users profile and thier recent matches",
   "main": "server.js",
